[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path= "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"


[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"]}
env_logger = "0.10.1"
config = "0.13"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx] 
version = "0.7" 
default-features = false 
features = [
  "runtime-tokio-rustls", "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = { version = "0.11.22", features = [] }
