[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path= "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_newsletter"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
log = "0.4.20"
tracing = { version = "0.1.40", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
env_logger = "0.10.1"
config = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
unicode-segmentation = "1"
validator = "0.16"

[dependencies.sqlx]
version = "0.7"
default-features = false 
features = [
  "runtime-tokio-rustls", "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
wiremock = "0.5"
tokio = {version = "1", features = ["rt", "macros"]}
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3"
claims = "0.7"
once_cell = "1"
